--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "krp-sharedmemory-client",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "",
     "author": "Fynn Haupt",
     "license": "MIT",
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@types/node": "^20.2.5",
         "cross-env": "^7.0.3",
+        "ts-node": "^10.9.1",
         "typescript": "^5.1.3"
     },
     "dependencies": {
