--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "types": "dist/wrapper.d.ts",
     "gypfile": true,
     "scripts": {
-        "install": "npm run build && tsc",
-        "pretest": "npm run build && tsc",
+        "install": "(prebuild-install || npm run build) && tsc",
         "test": "cross-env UV_THREADPOOL_SIZE=32 node --napi-modules ./test/test_binding.js",
         "build": "node-gyp rebuild",
-        "clean": "node-gyp clean"
+        "clean": "node-gyp clean",
+        "prebuild": "prebuild -t 3 -r napi -a x64 --strip",
+        "prebuild-upload": "prebuild --upload-all -u %GITHUB_TOKEN%"
     },
+    "binary": {
+        "napi_versions": [
+            3
+        ]
+      },
     "devDependencies": {
         "@types/node": "^20.2.5",
         "cross-env": "^7.0.3",
+        "prebuild": "^11.0.2",
         "typescript": "^5.1.3"
     },
     "dependencies": {
         "node-addon-api": "^6.1.0",
+        "prebuild-install": "^7.1.1",
         "tiny-typed-emitter": "^2.1.0"
     }
 }
