--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     tags: ['*']
 
 jobs:
-    prebuild:
+    build:
         runs-on: windows-2019
 
         steps:
@@ -23,4 +23,24 @@ jobs:
               run: npm run prebuild
 
             - name: Prebuild upload
-              run: prebuild --upload-all -u ${{ secrets.GITHUB_TOKEN }}
+              run: node_modules/.bin/prebuild.cmd --upload-all -u ${{ secrets.GITHUB_TOKEN }}
+
+    publish:
+        runs-on: windows-2019
+
+        steps:
+          - uses: actions/checkout@v3
+    
+          - uses: actions/setup-node@v3
+            with:
+              node-version: 18
+              cache: 'npm'
+
+          - name: Setup environment
+            run: npm install
+
+          - name: Publish package
+            uses: mikeal/merge-release@master
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
