--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
               run: npm run prebuild
 
             - name: Prebuild upload
-              run: node_modules/.bin/prebuild.cmd --upload-all -u ${{ secrets.GITHUB_TOKEN }}
+              run: node_modules/.bin/prebuild.cmd --upload-all -u ${{ secrets.GH_TOKEN }}
 
     publish:
         runs-on: windows-2019
@@ -40,7 +40,6 @@ jobs:
             run: npm install
 
           - name: Publish package
-            uses: mikeal/merge-release@master
-            env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+            uses: JS-DevTools/npm-publish@v1
+            with:
+              token: ${{ secrets.NPM_TOKEN }}
