added upload script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "install": "(prebuild-install || node-gyp rebuild) && tsc",
     "test": "cross-env UV_THREADPOOL_SIZE=32 node --napi-modules ./test/test_binding.js",
     "clean": "node-gyp clean",
-    "prebuild": "prebuild -t 3 -r napi -a x64 --strip"
+    "prebuild": "prebuild -t 3 -r napi -a x64 --strip",
+    "prebuild-upload": "node ./script/upload.js"
   },
   "repository": {
     "type": "git",
