--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
             - name: Prebuild upload
               run: npm run prebuild-upload
               env:
-                GITHUB_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                GITHUB_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
 
     publish:
         runs-on: windows-2019
