--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prebuild": "^13.0.0",
     "prettier": "3.2.5",
     "typedoc": "^0.25.12",
+    "typedoc-material-theme": "^1.0.2",
     "typescript": "^5.4.2"
   }
 }
