--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "krp-sharedmemory-client",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "Node.js Wrapper to communicate with Kart Racing Pro Client.",
   "main": "dist/wrapper.js",
   "types": "dist/wrapper.d.ts",
@@ -46,8 +46,7 @@
   },
   "dependencies": {
     "node-addon-api": "^8.0.0",
-    "prebuild-install": "^7.1.2",
-    "tiny-typed-emitter": "^2.1.0"
+    "prebuild-install": "^7.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.26",
