--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./dist",
     "rootDir": "./lib",
     "strict": true,
+    "allowJs": true,
     "target": "es6",
     "esModuleInterop": true
   },
